install adobe pdf reader 9 in recommended mode by default

--- a/vmcloak/data/recommended.ini
+++ b/vmcloak/data/recommended.ini
@@ -1,6 +1,6 @@
 [vmcloak]
 
-dependencies = dotnet40
+dependencies = dotnet40 acrobat9
 iso-mount = /mnt/winxp
 vm-dir = ~/vms/
 data-dir = ~/vm-data/
