--- a/vmcloak/data/recommended.ini
+++ b/vmcloak/data/recommended.ini
@@ -1,6 +1,6 @@
 [vmcloak]
 
-dependencies = dotnet40 acrobat9
+dependencies = dotnet40 acrobat9 pil java7
 iso-mount = /mnt/winxp
 vm-dir = ~/vms/
 data-dir = ~/vm-data/
