--- a/vmcloak/data/recommended.ini
+++ b/vmcloak/data/recommended.ini
@@ -2,5 +2,5 @@
 
 dependencies = dotnet40 acrobat9 firefox3_6 java7 silverlight5 pil
 vm-dir = ~/vms/
-data-dir = ~/vm-data/
+data-dir = ~/vms/
 cuckoo = ~/cuckoo/
