cuckoo doesnt like pandas because it demands upgrade of python-dateutil

--- a/vmcloak/data/template/virtualbox.conf
+++ b/vmcloak/data/template/virtualbox.conf
@@ -23,7 +23,7 @@ controlports = 5000-5050
 
 
 {% for name, conf in machines.items() %}
-[name]
+[{{ name }}]
 label = {{ name }}
 snapshot = {{ conf.snapshot }}
 platform = windows
