--- a/vmcloak/data/template/vmware.conf
+++ b/vmcloak/data/template/vmware.conf
@@ -18,7 +18,7 @@ machines = {{ machines.keys()|join(', ') }}
 interface = virbr0
 
 {% for name, conf in machines.items() %}
-[name]
+[{{ name }}]
 vmx_path = {{ conf.vmx_path }}
 snapshot = {{ conf.snapshot }}
 platform = windows
