doesnt need to use list for snapshots, cuckoo doesnt support

--- a/vmcloak/data/template/virtualbox.conf
+++ b/vmcloak/data/template/virtualbox.conf
@@ -25,9 +25,9 @@ controlports = 5000-5050
 {% for name, conf in machines.items() %}
 [{{ name }}]
 label = {{ name }}
-snapshot = {{ conf.snapshot }}
+snapshot = {{ conf[0].snapshot }}
 platform = windows
-ip = {{ conf.ipaddr }}
+ip = {{ conf[0].ipaddr }}
 interface = 
 {% endfor %}
 
