iface vmware fixed!

--- a/vmcloak/data/template/vmware.conf
+++ b/vmcloak/data/template/vmware.conf
@@ -15,7 +15,7 @@ machines = {{ machines.keys()|join(', ') }}
 # Specify the name of the default network interface that should be used
 # when dumping network traffic with tcpdump.
 # Example (virbr0 is the interface name):
-interface = virbr0
+interface = vmnet1
 
 {% for name, conf in machines.items() %}
 [{{ name }}]
