do not use kvm at all!

--- a/vmcloak/data/template/qemu.conf
+++ b/vmcloak/data/template/qemu.conf
@@ -18,6 +18,8 @@ label = {{ name }}
 image = {{ conf.image }}
 snapshot = {{ conf.snapshot }}
 platform = windows
+# use kvm virtualization
+enable_kvm = no
 ip = {{ conf.ipaddr }}
 interface = 
 {% endfor %}
